# sentinel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  action.yml  sentinel.yml
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/tests/: cli.rs
crates/ai-config/: Cargo.toml
crates/ai-config/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/findings/: Cargo.toml
crates/findings/src/: lib.rs
crates/git-integration/: Cargo.toml
crates/git-integration/src/: lib.rs
crates/github-actions/: Cargo.toml
crates/github-actions/src/: lib.rs
crates/html-report/: Cargo.toml
crates/html-report/src/: lib.rs
crates/jailbreak-analysis/: Cargo.toml
crates/jailbreak-analysis/src/: lib.rs
crates/mcp-analysis/: Cargo.toml
crates/mcp-analysis/src/: lib.rs
crates/prompt-analysis/: Cargo.toml
crates/prompt-analysis/src/: lib.rs
crates/rules/: Cargo.toml
crates/rules/src/: lib.rs
crates/sarif/: Cargo.toml
crates/sarif/src/: lib.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: lib.rs
crates/secret-analysis/: Cargo.toml
crates/secret-analysis/src/: lib.rs
docs/: ai-config-detection.md  architecture.md  threat-model.md
docs/adr/: 0001-rust-workspace.md  0002-offline-rule-engine.md  0003-output-formats.md  0004-scanner-extensibility.md
examples/ai-configs/.claude/: mcp.json
examples/ai-configs/.cursor/rules/: agent.mdc
examples/ai-configs/autogen/: autogen.json
examples/ai-configs/crewai/: crew.yaml
examples/ai-configs/langgraph/: langgraph.json
examples/ai-configs/openai/: agent.json
examples/benign-ai-configs/: agent.json
examples/mcp-server/: server.json
examples/vulnerable-prompts/: system.md
rules/agents/: excessive-permissions.yml  external-destinations.yml  unsafe-autonomy.yml
rules/mcp/: dangerous-tools.yml
rules/prompts/: indirect-prompt-injection.yml  prompt-injection.yml
rules/secrets/: common-secrets.yml
rules/workflows/: github-actions-risk.yml
scripts/: install.ps1  install.sh
