[package]
name = "sentinel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
indicatif.workspace = true
sentinel-common = { path = "../../crates/common" }
sentinel-findings = { path = "../../crates/findings" }
sentinel-html-report = { path = "../../crates/html-report" }
sentinel-sarif = { path = "../../crates/sarif" }
sentinel-scanner = { path = "../../crates/scanner" }
serde_yaml.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

