[package]
name = "sentinel-html-report"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
sentinel-findings = { path = "../findings" }
tera.workspace = true

