[package]
name = "sentinel-sarif"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
sentinel-findings = { path = "../findings" }
serde_json.workspace = true

